Rework native access with foreign API and implement Block interface