@@ -1,8 +1,10 @@
 plugins {
+    `java-library`
     kotlin("jvm")
 }
 
 group = "site.neworld"
+val moduleName by extra("site.neworld.cio")
 
 repositories {
     mavenCentral()
@@ -14,7 +16,24 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3")
 }
 
-val compileKotlin: org.jetbrains.kotlin.gradle.tasks.KotlinCompile by tasks
-compileKotlin.kotlinOptions {
-    freeCompilerArgs = listOf("-Xopt-in=kotlin.RequiresOptIn")
+java {
+    sourceCompatibility = JavaVersion.VERSION_16
+    targetCompatibility = JavaVersion.VERSION_16
+    modularity.inferModulePath.set(true)
+}
+
+tasks {
+    compileJava {
+        inputs.property("moduleName", moduleName)
+        options.compilerArgs = listOf(
+            "--add-modules", "jdk.incubator.foreign",
+            "--patch-module", "$moduleName=${sourceSets.main.get().output.asPath}"
+        )
+    }
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = "16"
+            freeCompilerArgs = listOf("-Xopt-in=kotlin.RequiresOptIn")
+        }
+    }
 }
